--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Environment variables
+.env
+.env.local
+
 # Python
 __pycache__/
 *.py[cod]
@@ -31,12 +35,12 @@ ENV/
 *.swp
 *.swo
 
-# Environment variables
-.env
-.env.local
-
 # Streamlit
 .streamlit/secrets.toml
 
 # Logs
 *.log
+
+# OS
+.DS_Store
+Thumbs.db 
